--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="IOTest.h" />
+    <ClInclude Include="LimitTest.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
