--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="IOTest.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="LimitTest.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
