--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="src\LimitTest.h" />
     <ClInclude Include="src\Test.h" />
     <ClInclude Include="src\TestArray.h" />
+    <ClInclude Include="src\TestEnum.h" />
     <ClInclude Include="src\TestString.h" />
     <ClInclude Include="src\TestStruct.h" />
   </ItemGroup>
