添加测试时间类函数

--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="src\TestPointer.h" />
     <ClInclude Include="src\TestString.h" />
     <ClInclude Include="src\TestStruct.h" />
+    <ClInclude Include="src\TestTime.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LearnCppProject.cpp" />
