--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{1714C8BE-ACAE-4E7E-B525-7775FFFA27D4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>LearnCppProject</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -162,6 +162,7 @@
     <ClInclude Include="src\TestPointer.h" />
     <ClInclude Include="src\TestString.h" />
     <ClInclude Include="src\TestStruct.h" />
+    <ClInclude Include="src\TestTemplate.h" />
     <ClInclude Include="src\TestTime.h" />
   </ItemGroup>
   <ItemGroup>
