--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="src\Test.cpp">
       <Filter>源文件\src</Filter>
     </ClCompile>
+    <ClCompile Include="src\TestLink.cpp">
+      <Filter>源文件\src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
