--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClInclude Include="src\TestString.h">
       <Filter>源文件\src</Filter>
     </ClInclude>
-    <ClInclude Include="src\TestStruct.h">
-      <Filter>源文件\src</Filter>
-    </ClInclude>
     <ClInclude Include="src\TestPointer.h">
       <Filter>源文件\src</Filter>
     </ClInclude>
@@ -57,6 +54,9 @@
     <ClInclude Include="src\TestTemplate.h">
       <Filter>源文件\src</Filter>
     </ClInclude>
+    <ClInclude Include="src\TestStructAndClass.h">
+      <Filter>源文件\src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -69,6 +69,9 @@
       <Filter>源文件\src</Filter>
     </ClCompile>
     <ClCompile Include="src\TestLink.cpp">
+      <Filter>源文件\src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TestStructAndClass.cpp">
       <Filter>源文件\src</Filter>
     </ClCompile>
   </ItemGroup>
