--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="src\LimitTest.h" />
     <ClInclude Include="src\Test.h" />
     <ClInclude Include="src\TestArray.h" />
+    <ClInclude Include="src\TestException.h" />
     <ClInclude Include="src\TestFor.h" />
     <ClInclude Include="src\TestFunction.h" />
     <ClInclude Include="src\TestNew.h" />
