--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="src\TestStructAndClass.h">
       <Filter>源文件\src</Filter>
     </ClInclude>
+    <ClInclude Include="src\TestException.h">
+      <Filter>源文件\src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
