添加测试容器代码

--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="src\TestPointer.h" />
     <ClInclude Include="src\TestRTTI.h" />
     <ClInclude Include="src\TestSmartPointer.h" />
+    <ClInclude Include="src\TestSTLContainer.h" />
     <ClInclude Include="src\TestString.h" />
     <ClInclude Include="src\TestStructAndClass.h" />
     <ClInclude Include="src\TestTemplate.h" />
