--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -152,7 +152,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="src\Learn3D\Math.h" />
+    <ClInclude Include="src\Learn3D\Mathf.h" />
+    <ClInclude Include="src\Learn3D\Test3DMath.h" />
     <ClInclude Include="src\LearnCpp\IOTest.h" />
     <ClInclude Include="src\LearnCpp\LimitTest.h" />
     <ClInclude Include="src\LearnCpp\Test.h" />
@@ -179,6 +180,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
     <ClCompile Include="src\LearnCpp\Test.cpp" />
     <ClCompile Include="src\LearnCpp\TestLink.cpp" />
     <ClCompile Include="src\LearnCpp\TestStructAndClass.cpp" />
