--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="src\Learn3D\Mathf.h" />
     <ClInclude Include="src\Learn3D\Test3DMath.h" />
     <ClInclude Include="src\Learn3D\Vector3.h" />
+    <ClInclude Include="src\Learn3D\Vector4.h" />
     <ClInclude Include="src\LearnCpp\IOTest.h" />
     <ClInclude Include="src\LearnCpp\LimitTest.h" />
     <ClInclude Include="src\LearnCpp\Test.h" />
@@ -183,6 +184,7 @@
     </ClCompile>
     <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
     <ClCompile Include="src\Learn3D\Vector3.cpp" />
+    <ClCompile Include="src\Learn3D\Vector4.cpp" />
     <ClCompile Include="src\LearnCpp\Test.cpp" />
     <ClCompile Include="src\LearnCpp\TestLink.cpp" />
     <ClCompile Include="src\LearnCpp\TestStructAndClass.cpp" />
