--- a/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnCppProject/LearnCppProject.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="src\Learn3D\Vector4.h">
       <Filter>源文件\src\Learn3D</Filter>
     </ClInclude>
+    <ClInclude Include="src\Learn3D\Quaternion.h">
+      <Filter>源文件\src\Learn3D</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -114,6 +117,9 @@
       <Filter>源文件\src\Learn3D</Filter>
     </ClCompile>
     <ClCompile Include="src\Learn3D\Vector4.cpp">
+      <Filter>源文件\src\Learn3D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Learn3D\Mathf.cpp">
       <Filter>源文件\src\Learn3D</Filter>
     </ClCompile>
   </ItemGroup>
