--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="include\shader.h" />
     <ClInclude Include="include\vmath.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="src\LearnOpengl\TestApplication.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LearnOpenGL.cpp" />
@@ -180,6 +181,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\GL\gl3w.c" />
+    <ClCompile Include="src\LearnOpengl\TestApplication.cpp" />
     <ClCompile Include="src\sb7\sb7.cpp" />
     <ClCompile Include="src\sb7\sb7color.cpp" />
     <ClCompile Include="src\sb7\sb7ktx.cpp" />
